Closed Bug 1697509 Opened 3 years ago Closed 3 years ago

WebGPU examples crash on macOS and Windows, but not Linux

Categories

(Core :: Graphics: WebGPU, defect)

x86_64
Windows
defect

Tracking

()

RESOLVED FIXED
88 Branch
Tracking Status
firefox88 --- fixed

People

(Reporter: kvark, Assigned: kvark)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The update in https://phabricator.services.mozilla.com/D107013 broke some of the examples. The crash happens in Rust panic from shader creation, but only on Windows and macOS.

Assignee: nobody → dmalyshau
Regressed by: 1622846
Has Regression Range: --- → yes

Expose adapter limits, hook up spirv-cross

Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a6378449fad5
Fix WebGPU shaders and adapter limits r=jgilbert
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: