Bug 1697509 - Fix WebGPU shaders and adapter limits r=jgilbert

Expose adapter limits, hook up spirv-cross

Differential Revision: https://phabricator.services.mozilla.com/D107840